fix gaps

--- a/src/components/LikeButton.module.scss
+++ b/src/components/LikeButton.module.scss
@@ -2,8 +2,6 @@
   border: none;
   display: flex;
   align-items: center;
-  gap: 0.5rem;
-  padding: 0.5rem 1rem;
   background: none;
   cursor: pointer;
   font-size: 0.9rem;
